# training-manager

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: labels.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: docs.yml  python-smoke.yml
docs/: api.rst  architecture.md  architecture.rst  build.py  cli.rst  conf.py  diagnostics.rst  environment-setup.md  examples.rst  getting-started.md  getting-started.rst  github-labels.md  host-preparation.rst  index.md  index.rst  lavender-2.md  maintainer-backlog.md  maintainer-notes.md  maintainer-notes.rst  roadmap.md  site.css
docs/media/: README.md
examples/toy-notebook-project/: README.md  pyproject.toml  train.ipynb  train.py
training_manager/: cli.py  metrics.py  paths.py  project.py  runtime.py  sdk.py  server.py  supervisor_backend.py  util.py
training_manager/static/: app.js  index.html  style.css
