[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "training-manager"
version = "0.1.0"
description = "Lightweight supervisor-backed web UI for long-running Python and notebook training jobs"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Nesbitt"}]
dependencies = []

[project.scripts]
training-manager = "training_manager.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["training_manager*"]

[tool.setuptools.package-data]
training_manager = ["static/*"]
