[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "training-manager"
version = "0.1.0"
description = "Lightweight supervisor-backed web UI for long-running Python and notebook training jobs"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Nesbitt"}]
license = {text = "MIT"}
keywords = ["training", "ml", "jobs", "supervisor", "research", "web-ui"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Operating System :: POSIX :: Linux",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: System :: Monitoring",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Nesbitt-bot/training-manager"
Documentation = "https://nesbitt-bot.github.io/training-manager/"
Repository = "https://github.com/Nesbitt-bot/training-manager"
Issues = "https://github.com/Nesbitt-bot/training-manager/issues"

[project.scripts]
training-manager = "training_manager.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["training_manager*"]

[tool.setuptools.package-data]
training_manager = ["static/*"]
