[project]
name = "training-manager-toy-notebook"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "ipykernel>=7.2.0",
  "nbconvert>=7.16.6",
  "scikit-learn>=1.5.0",
  "torch>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["training_manager_toy_notebook"]
